# bazel_terraform

./: .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: Dockerfile
.github/workflows/: ci.bazelrc  ci.yaml  release.yaml  release_prep.sh  update_versions.yaml
e2e/common_state_configuration/: terraform_root_test.sh
e2e/common_state_configuration/common/: state-backend.tf
e2e/declarative_authentication/: BUILD.bazel  defs.bzl  terraform_plan.sh
e2e/declarative_authentication/root_a/: BUILD.bazel
e2e/local_module/: BUILD.bazel  main.tf
e2e/local_module/module_a/: BUILD.bazel
e2e/local_module/module_b/: BUILD.bazel  main.tf
e2e/multiple_versions/: BUILD.bazel  MODULE.bazel
e2e/multiple_versions/0.12/: BUILD.bazel  main.tf  variables.tf
e2e/multiple_versions/1.0/: BUILD.bazel
e2e/multiple_versions/1.6/: BUILD.bazel
e2e/opa/: BUILD.bazel  terraform_plan.sh
e2e/opa/root_a/: BUILD.bazel
e2e/smoke/: MODULE.bazel  WORKSPACE.bazel  terraform_root_test.sh
e2e/smoke/0.11/: BUILD.bazel  main.tf
e2e/smoke/0.11/my_module/: BUILD.bazel
e2e/smoke/0.12/: BUILD.bazel  outputs.tf
e2e/smoke/0.12/my_module/: BUILD.bazel
e2e/smoke/0.14/: BUILD.bazel  main.tf
e2e/smoke/0.14/my_module/: BUILD.bazel
e2e/smoke/1.0/: BUILD.bazel
e2e/smoke/1.0/my_module/: BUILD.bazel
e2e/smoke/1.6/: BUILD.bazel
e2e/smoke/1.6/my_module/: BUILD.bazel  main.tf
e2e/smoke/common/: BUILD.bazel
examples/0.11/: BUILD.bazel  main.tf
examples/0.11/my_module/: BUILD.bazel  main.tf
examples/0.12/: BUILD.bazel  main.tf
examples/0.12/my_module/: BUILD.bazel
examples/0.13/: BUILD.bazel  main.tf
examples/0.13/my_module/: BUILD.bazel
examples/0.14/: BUILD.bazel  main.tf
examples/0.14/my_module/: BUILD.bazel
examples/0.15/: BUILD.bazel  main.tf
examples/0.15/my_module/: BUILD.bazel
examples/1.0/: main.tf
examples/1.0/my_module/: BUILD.bazel
examples/1.1/: BUILD.bazel  main.tf
examples/1.1/my_module/: BUILD.bazel
examples/1.2/: BUILD.bazel  main.tf
examples/1.2/my_module/: BUILD.bazel  main.tf
examples/1.6/: BUILD.bazel  main.tf
examples/1.6/my_module/: BUILD.bazel  main.tf
examples/common/: BUILD.bazel  state-backend.tf
examples/common_state_configuration/: MODULE.bazel
examples/common_state_configuration/root_a/: BUILD.bazel  main.tf
examples/common_state_configuration/root_b/: BUILD.bazel
examples/declarative_authentication/: MODULE.bazel
examples/declarative_authentication/root_a/: main.tf
examples/local_module/: BUILD.bazel  WORKSPACE.bazel  main.tf  terraform_root_test.sh
examples/local_module/module_a/: main.tf
examples/multiple_versions/: MODULE.bazel  WORKSPACE.bazel  terraform_root_test.sh
examples/multiple_versions/0.11/: BUILD.bazel  main.tf
examples/multiple_versions/0.14/: BUILD.bazel
examples/multiple_versions/1.6/: main.tf
examples/opa/: MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  defs.bzl  policy.rego  terraform_plan.sh
examples/opa/root_a/: BUILD.bazel
scripts/: BUILD.bazel  mirror_terraform_releases.sh
terraform/: BUILD.bazel  defs.bzl  dependencies.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
terraform/private/: BUILD.bazel  module.bzl  root.bzl  toolchains_repo.bzl  util.bzl  venv.sh.tpl  versions.bzl  versions.bzl.bak
terraform/tests/: BUILD.bazel  root_tests.bzl
terraform/tools/bazel_terraform/: BUILD.bazel  main.go
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  lint.sh  linters.bzl
