###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
"VJftw/bazel_terraform"

module(
    name = "bazel_terraform",
    version = "0.0.0",
    compatibility_level = 1,
)

# Dependencies

#bazel_dep(name = "aspect_bazel_lib", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

# # Dev - local

bazel_dep(name = "aspect_rules_lint", version = "1.3.4", dev_dependency = True)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)

# Go for the bazel_terraform tool.
bazel_dep(name = "rules_go", version = "0.57.0")
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.1")

# terraform = use_extension("//terraform:extensions.bzl", "terraform")

# terraform.toolchains(terraform_version = "1.6.6")
# terraform.toolchains(terraform_version = "1.2.8")
# terraform.toolchains(terraform_version = "1.1.4")
# terraform.toolchains(terraform_version = "1.0.3")
# terraform.toolchains(terraform_version = "0.15.4")
# terraform.toolchains(terraform_version = "0.14.11")
# terraform.toolchains(terraform_version = "0.13.7")
# terraform.toolchains(terraform_version = "0.12.31")
# terraform.toolchains(terraform_version = "0.11.15")
# use_repo(terraform, "terraform_terraform_toolchains")
