"Bazel dependencies"

bazel_dep(name = "bazel_terraform", version = "0.0.0", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")

local_path_override(
    module_name = "bazel_terraform",
    path = "../..",
)

terraform = use_extension("@bazel_terraform//terraform:extensions.bzl", "terraform")

terraform.toolchains(terraform_version = "1.6.3")
terraform.toolchains(terraform_version = "1.0.4")
terraform.toolchains(terraform_version = "0.14.2")
terraform.toolchains(terraform_version = "0.12.31")
terraform.toolchains(terraform_version = "0.11.15")
# terraform.toolchains(terraform_version = "1.6.4", sha256_by_platform = {"linux_amd64": "my-sha256-sum"})

use_repo(terraform, "terraform_terraform_toolchains")
register_toolchains("@terraform_terraform_toolchains//:all")
