load("//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "0.12",
    srcs = [
        "main.tf",
        "variables.tf",
        "//examples/common:state-backend.tf",
    ],
    modules = [
        "//examples/0.12/my_module",
    ],
    terraform_version = "0.12",
    var_files = [
        "my_vars.tfvars",
    ],
)
