load("//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "1.2",
    srcs = [
        "main.tf",
        "variables.tf",
        "//examples/common:state-backend.tf",
    ],
    modules = [
        "//examples/1.2/my_module",
    ],
    terraform_version = "1.2",
    var_files = [
        "my_vars.tfvars",
    ],
)
