load("//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "1.6",
    srcs = [
        "main.tf",
        "variables.tf",
        "//examples/common:state-backend.tf",
    ],
    modules = [
        "//examples/1.6/my_module",
    ],
    terraform_version = "1.6",
    var_files = [
        "my_vars.tfvars",
    ],
)
