workspace(name = "workspace")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "opa",
    sha256 = "71514c6c70e744713656a302131e3172988c4898b43cb503f273086d47ccc299",
    url = "https://github.com/open-policy-agent/opa/releases/download/v0.60.0/opa_linux_amd64",
)

local_repository(
    name = "bazel_terraform",
    path = "../../",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

load("@bazel_terraform//terraform:dependencies.bzl", "bazel_terraform_dependencies")

bazel_terraform_dependencies()

load("@bazel_terraform//terraform:repositories.bzl", "terraform_register_toolchains")

terraform_register_toolchains(
    name = "terraform",
    terraform_version_config = {
        "1.6.3": json.encode({}),
    },
)
