load("//:defs.bzl", "terraform_root")

terraform_root(
    name = "root",
    srcs = [
        "main.tf",
    ],
    terraform_version = "1.6",
)

# sh_test(
#     name = "validate_root",
#     srcs = ["terraform_root_test.sh"],
#     args = [
#         "$(location :root)",
#         "$(location @opa//file)",
#     ],
#     data = [
#         "policy.rego",
#         ":root",
#         "@opa//file",
#     ],
# )
