load("@bazel_terraform//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "0.14",
    srcs = [
        "main.tf",
        "variables.tf",
        "//common:state-backend.tf",
    ],
    modules = [
        "//0.14/my_module",
    ],
    terraform_version = "0.14",
    var_files = [
        "my_vars.tfvars",
    ],
)

sh_test(
    name = "validate_0.14",
    srcs = ["//:terraform_root_test.sh"],
    args = [
        "$(location :0.14)",
        "0.14.2",
    ],
    data = [":0.14"],
)
