load("@bazel_terraform//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "1.0",
    srcs = [
        "main.tf",
        "variables.tf",
        "//common:state-backend.tf",
    ],
    modules = [
        "//1.0/my_module",
    ],
    terraform_version = "1.0",
    var_files = [
        "my_vars.tfvars",
    ],
)

sh_test(
    name = "validate_1.0",
    srcs = ["//:terraform_root_test.sh"],
    args = [
        "$(location :1.0)",
        "1.0.4",
    ],
    data = [":1.0"],
)
