load("@bazel_terraform//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "root",
    srcs = [
        "main.tf",
        "//common:state-backend.tf",
    ],
    terraform_version = "1.6",
)

sh_test(
    name = "validate_root",
    srcs = ["//:terraform_root_test.sh"],
    args = [
        "$(location :root)",
        "root_a",
    ],
    data = [":root"],
)
