load("@bazel_terraform//terraform:defs.bzl", "terraform_root")

terraform_root(
    name = "0.11",
    srcs = [
        "main.tf",
        "variables.tf",
    ],
    terraform_version = "0.11",
    var_files = [
        "my_vars.tfvars",
    ],
)

sh_test(
    name = "validate_0.11",
    srcs = ["//:terraform_root_test.sh"],
    args = [
        "$(location :0.11)",
        # latest because of PGP key exposure in 2021-12
        # (https://discuss.hashicorp.com/t/hcsec-2021-12-codecov-security-event-and-hashicorp-gpg-key-exposure/23512)
        "0.11.15",
    ],
    data = [":0.11"],
)
